Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Jan-2011 Andrew Eddie
 # Fixed issue [#21275] Incorrect date format used when tracking banner clicks, causing Error: 500 when clicking on a banner (Cy Lee, Troy Hall).

04-Jan-2011 Jean-Marie Simonet
 $ Reordering admin en-GB.com_content.ini and updating xx-XX.com_content.ini
 # [#24104] Creation of My Profile broke Profile Plugin. Thanks Elin.
 # [#24117] A lot of CSS and other changes in beez20 and Beez 5. Thanks Angie.
 # [#24119] Adding automatically the character * to all required fields in admin and site
 $ [#24126] Feed Count vs. Number of articles in News Feed Manager. Thanks Bill.
 $ [#24127] Obsolete string in the news feeds component language file. Thanks Bill. + updated xx-XX.newsfeeds.sys.ini
 

03-Jan-2011 Mark Dexter
# [#23845] [Patch] Administrators can create, edit, delete Super Users

03-Jan-2011 Christophe Demko
 # [#23846] Possible to delete groups that have users
 # [#24092] View administrator/index.php?option=com_languages&view=installed displays site AND admin language
 # [#24086] All administrators can read private message which they were not receiver
 # [#23896] JFormFieldLanguage error when no client attribut set.
 # [#24099] Adding * to follow internet convention for the registration required fields in front-end (Jean-Marie Simonet)
 # [#24100] Following #22509. Private message and email is not in the user defined language

03-Jan-2011 Jean-Marie Simonet
 # [#24098] Extensions Manager does not discover languages correctly. Thanks Sam.
 # Correcting validation issue in [#24099]
 $ Changing back some strings from [#24099]. TODO: has to be implemented via CSS.
 # [#23946] Fix various IE7 issues with Hathor. Thanks Andrea.
 # [#24079] Replace all nbsp with the numeric entity. Thanks Rouven.

02-Jan-2011 Jean-Marie Simonet