@@ -50,8 +50,7 @@
 			size="30"
 		/>
 
-		<field name="email1" type="text"
-			class="validate-email"
+		<field name="email1" type="email"
 			description="Users_Profile_Email1_Desc"
 			filter="string"
 			label="COM_USERS_PROFILE_EMAIL1_LABEL"
@@ -62,8 +61,7 @@
 			validate="email"
 		/>
 
-		<field name="email2" type="text"
-			class="validate-email"
+		<field name="email2" type="email"
 			description="COM_USERS_PROFILE_EMAIL2_DESC"
 			field="email1"
 			filter="string"
